Edits to formation.html.

--- a/formation.html
+++ b/formation.html
@@ -17,8 +17,8 @@
         <h2>Completed</h2>
         <ul>
             <li class="sans"><input id="accept" name="accept" type="checkbox" checked> <label for="accept">Obtained business name</label></li>
-            <li class="sans"><input class="checkbox" type="checkbox" checked> <label>Articles of Incorporation with the state.</label></li>
-            <li class="sans"><input class="checkbox" type="checkbox" checked> <label>Nonprofit status</label></li>
+            <li class="sans"><input class="checkbox" type="checkbox" checked> <label>Articles of Incorporation with the state of Florida.</label></li>
+            <!-- <li class="sans"><input class="checkbox" type="checkbox" checked> <label>Nonprofit status</label></li> -->
             <li class="sans"><input class="checkbox" type="checkbox" checked> <label>EIN</label></li>
             <li class="sans"><input class="checkbox" type="checkbox" checked> <label>Opened bank account</label></li>
         </ul>
@@ -31,7 +31,7 @@
             <li class="sans"><input class="checkbox" type="checkbox"> <label>Create Compensation and Conflict of Interest Policies</li>
             <li class="sans"><input class="checkbox" type="checkbox"> <label>Review bylaws to ensure inclusion of Dissolution and Charitable Contributions clauses</li>
             <li class="sans"><input class="checkbox" type="checkbox"> <label>Register with state to obtain approval for Solicitation of Contributions</li>
-            <li class="sans"><input class="checkbox" type="checkbox"> <label>Handle all documents and correspondence with State and Federal agencies</li>
+            <li class="sans"><input class="checkbox" type="checkbox"> <label>Handle all documents and correspondence with state and federal agencies</li>
         </ul>
 
 
