Edits to formation.html.

--- a/formation.html
+++ b/formation.html
@@ -17,7 +17,7 @@
         <h2>Completed</h2>
         <ul>
             <li class="sans"><input id="accept" name="accept" type="checkbox" checked> <label for="accept">Obtained business name</label></li>
-            <li class="sans"><input class="checkbox" type="checkbox" checked> <label>Articles of Incorporation with the state of Florida.</label></li>
+            <li class="sans"><input class="checkbox" type="checkbox" checked> <label>Articles of Incorporation with the State of Florida.</label></li>
             <!-- <li class="sans"><input class="checkbox" type="checkbox" checked> <label>Nonprofit status</label></li> -->
             <li class="sans"><input class="checkbox" type="checkbox" checked> <label>EIN</label></li>
             <li class="sans"><input class="checkbox" type="checkbox" checked> <label>Opened bank account</label></li>
