Edits to formation.html.

--- a/formation.html
+++ b/formation.html
@@ -25,9 +25,9 @@
 
         <h2>We are in need of the following:</h2>
         <ul>
-            <li class="sans"><input class="checkbox" type="checkbox"> <label>Create organization by-laws</li>
+            <li class="sans"><input class="checkbox" type="checkbox"> <label>Create organization bylaws</li>
             <li class="sans"><input class="checkbox" type="checkbox"> <label>Complete Form 1023 and Narrative of Activities</li>
-                <li class="sans"><input class="checkbox" type="checkbox"> <label>Obtain IRS approval of 501(c)3 tax-exempt status (Expedite approval)</li>
+            <li class="sans"><input class="checkbox" type="checkbox"> <label>Obtain IRS approval of 501(c)3 tax-exempt status (Expedite approval)</li>
             <li class="sans"><input class="checkbox" type="checkbox"> <label>Create Compensation and Conflict of Interest Policies</li>
             <li class="sans"><input class="checkbox" type="checkbox"> <label>Review bylaws to ensure inclusion of Dissolution and Charitable Contributions clauses</li>
             <li class="sans"><input class="checkbox" type="checkbox"> <label>Register with state to obtain approval for Solicitation of Contributions</li>
