Edits to details.

--- a/details.html
+++ b/details.html
@@ -22,14 +22,15 @@
         <ul>
             <li>We will create a network of good works and fellowship that will produce fruit.</li>
             <li>We will provide a genuine and meaningful way of serving that's relational.</li>
-            <li>Modern living has severed and disrupted our connections to each other, animals, and nature. By serving one another and bearing each others burdens, along with helping animals and nature, we're living how life was intended to be. This will
-                foster a genuine respect and love for each other and HIS creation.</li>
+            <li>Modern living has severed and disrupted our connections to each other, animals, and nature. By serving one another and bearing each others burdens, along with helping animals and nature, we would be living life as it is intended to be. This
+                will foster a genuine respect and love for each other and GOD's creation.</li>
         </ul>
 
-        <p>Studies have shown (cite studies) that interaction with animals and immersing ourselves in nature provides genuine health benefits.</p>
+        <!-- <p>Studies have shown (cite studies) that interaction with animals and immersing ourselves in nature provides genuine health benefits.</p> -->
+
         <h1>Population Served </h1>
-        <p>We will follow the need. First we seek and address situational circumstances such as lack of housing and food, drug addiction, orphaned children; neglected and abused animals, environmental issues, etc, by providing the necessary resources. Then,
-            we will address issues of the heart in order to ignite the hope and love of JESUS CHRIST.</p>
+        <p>We will follow the need. First we will seek and address situational circumstances such as lack of housing and food, drug addiction, orphaned children; neglected and abused animals, environmental issues, etc, by providing the necessary resources.
+            Then, we will address issues of the heart in order to ignite the hope and love of JESUS CHRIST.</p>
         <h1>Activities & Programs</h1>
         <h3>People in Need Program</h3>
         <ul>
@@ -39,20 +40,23 @@
             <li>Orphans</li>
             <li>Lack of food</li>
             <li>Resources for success</li>
+            <li>And more</li>
         </ul>
         <h3>Animals in need program</h3>
         <ul>
-            <li>We will have an animal rescue to help those that have been abused, neglected, or displaced.</li>
-            <li>We will rehabilitate horses and other livestock; dogs, cats, and even wild animals (either at our facility or partner facilities).</li>
-            <li>Find loving homes for domesticated animals.</li>
+            <li>We will create an animal rescue to rescue animals from euthenasia, emergency situations, abuse, neglect, and abandonment and find them loving foster or forever homes.</li>
+            <li>We will help rescued animals at our facility or through partner facilities.</li>
+            <!-- <li>Find loving homes for domesticated animals.</li> -->
             <li>Rehab and release wild animals back into the wild.</li>
+            <li>And more</li>
         </ul>
 
         <h3>Nature in need program</h3>
         <ul>
             <li>Clean up beaches, public areas, and communities.</li>
-            <li>Clean up and also address specific environmental areas.</li>
-            <li>Address specific environmental issues by collaborating with innovative individuals and organizations that will create meaningful and significant change.</li>
+            <li>Find innovative ways to address specific environmental issues.</li>
+            <li>Collaborate with innovative individuals and organizations that will create meaningful and significant change.</li>
+            <li>And more</li>
         </ul>
 
         <p>We will also partner and collaborate with other nonprofits that are doing GOD's work. Collaboration over competition. We need to step forward as a united body, together, in order to create real meaningful change and transformation of the heart.</p>
