Edited CSS so the title won't be over the children's faces.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 
     <link rel="stylesheet" href="css/styles.css">
 
+    <!-- I love you HEAVENLY FATHER! -->
 </head>
 
 <body>
-    <!-- This inspiration for this: https://websitedemos.net/heritage-hotel-04/ -->
+    <!-- 
+        The following design was the inspiration for this: https://websitedemos.net/heritage-hotel-04/ 
+    -->
 
     <section id="hero">
         <nav>
