--- a/details.html
+++ b/details.html
@@ -118,6 +118,8 @@
 
         <p>Alisha M. Fredrickson,<br>Program Director</p>
         <p>Timothy G. Pipkorn,<br>Financial Director</p>
+        <p>Fourth Board Member,<br>Pending</p>
+        <p>Fifth Board Member,<br>Pending</p>
         <p>Frank J. Quinones,<br>CEO</p>
     </section>
 
