Edits to crowdfunding.

--- a/crowdfunding.html
+++ b/crowdfunding.html
@@ -12,6 +12,26 @@
 <body>
     <section class="container">
         <div id="hero"></div>
+        <h1>We Need Your Help</h1>
+        <div class="content">
+            <p>Hello Children of GOD!</p>
+            <p>My name is Frank and we need your help.</p>
+            <p>In 2018 GOD the FATHER presented HIMSELF to me in such a powerful way that it was impossible for me to deny HIM. HIS presence is amazing. HIS heart is beyond beautiful. HIS mind is beyond awesome.</p>
+
+            <p>During that time HE revealed to me that I was to lead a nonprofit. Of course I thought the nonprofit already existed. It didn't. </p>
+
+            <p>In late 2020 HE gave us the name. In 2021 we incorporated. I tried for a long time to meet the necessary legal requirements (i.e. tax exemption, registering with the state, bylaws, etc) but preparing legal documentation is not my strength.
+                So we found a firm that would handle all the legal requirements to get us up and running and they would remain with us for a year in order to help us out. </p>
+
+            <p>The problem is that we're running out of funds. I risked everything, I put everything on the line for HIS vision of this nonprofit; I truly believe with all my heart, and all my mind, and with every fiber of my spirit that this is HIS vision
+                and HE will make it happen.</p>
+
+            <p>So I am here, asking you, to please make a donation so we can finally get things going. Please take this to the LORD in prayer and ask what your donation will be. It can be money, or even resources that would help us out.</p>
+
+            <p>I am truly grateful for your time.</p>
+
+            <p>PEACE to you and your house from GOD the FATHER.</p>
+        </div>
     </section>
 </body>
 
