Edits to crowdfunding.

--- a/crowdfunding.html
+++ b/crowdfunding.html
@@ -14,23 +14,20 @@
         <div id="hero"></div>
         <h1>We Need Your Help</h1>
         <div class="content">
-            <p>Hello Children of GOD!</p>
-            <p>My name is Frank and we need your help.</p>
-            <p>In 2018 GOD the FATHER presented HIMSELF to me in such a powerful way that it was impossible for me to deny HIM. HIS presence is amazing. HIS heart is beyond beautiful. HIS mind is beyond awesome.</p>
-
-            <p>During that time HE revealed to me that I was to lead a nonprofit. Of course I thought the nonprofit already existed. It didn't. </p>
-
-            <p>In late 2020 HE gave us the name. In 2021 we incorporated. I tried for a long time to meet the necessary legal requirements (i.e. tax exemption, registering with the state, bylaws, etc) but preparing legal documentation is not my strength.
-                So we found a firm that would handle all the legal requirements to get us up and running and they would remain with us for a year in order to help us out. </p>
-
-            <p>The problem is that we're running out of funds. I risked everything, I put everything on the line for HIS vision of this nonprofit; I truly believe with all my heart, and all my mind, and with every fiber of my spirit that this is HIS vision
-                and HE will make it happen.</p>
-
-            <p>So I am here, asking you, to please make a donation so we can finally get things going. Please take this to the LORD in prayer and ask what your donation will be. It can be money, or even resources that would help us out.</p>
-
-            <p>I am truly grateful for your time.</p>
-
-            <p>PEACE to you and your house from GOD the FATHER.</p>
+            <p>Hello! My name is Frank and my family and I are in need of financial help. My family consists of my wife, 3 children, my mom, and our pets.</p>
+            <p>My wife and I both had successful careers with two major US corporations. I was trying to climb the ladder without having to sacrifice my integrity, dignity, and my character. I began to make some great internal connections which lead to some
+                amazing relationships and projects. I partnered with some great people who helped me build successful projects and I was also able to influence senior leadership in launching a huge initiative. I thought I was finally on my way to get
+                the promotion I worked hard at for years. Instead, my boss saw me as a threat and launched a campaign of lies about me, manipulated people, and convinced them to terminate me in August 2020.</p>
+            <p>I withdrew my 401k to help us through that time. Because of all the serious issues with virtual learning and the public school system during the pandemic, we withdrew our children and began homeschooling.</p>
+            <p>In the summer of 2021, my wife had to take a short term leave from work due to back issues that were caused by a car accident the week before the lockdowns. She was supposed to be out for only a month. That month has turned into 2 back surgeries
+                and 10 months medical leave so far. She lost her income and unfortunately her employer doesn't want to accept the doctor's restrictions. We're at a point where we don't know if she'll be able to return to her job of 20 years.</p>
+            <p>During all this time, I have been homeschooling our children, taking care of my wife, as well as my mom who also has health issues. In that time I've been looking for remote work because I need to continue caring for my family. Unfortunately
+                I haven't been able to find something that will allow me the flexibility I need to continue caring for my family.</p>
+            <p>This is why I'm reaching out to you all. Our savings are dangerously low and won't last much longer. We need financial help now, while I continue to care for my family and continue to look for a job.</p>
+            <p>Your contribution will be a huge help for us. I am in constant prayer, asking GOD to guide my family and I through this challenging season.</p>
+            <p>I truly appreciate the time you have taken in reading our story and the consideration of your donation.</p>
+            <p>GOD Bless you all.</p>
+            <p>Thank you.</p>
         </div>
     </section>
 </body>
