--- a/details.html
+++ b/details.html
@@ -59,6 +59,7 @@
             <li>And more</li>
         </ul>
 
+        <h1>Partnership, Collaborate, &amp; Support</h1>
         <p>We will also partner and collaborate with other nonprofits that are doing GOD's work. Collaboration over competition. We need to step forward as a united body, together, in order to create real meaningful change and transformation of the heart.</p>
 
 
@@ -120,7 +121,7 @@
         <p>Timothy G. Pipkorn,<br>Financial Director</p>
         <p>Fourth Board Member,<br>Pending</p>
         <p>Fifth Board Member,<br>Pending</p>
-        <p>Frank J. Quinones,<br>CEO</p>
+        <p>Frank J. Quinones,<br>Executive Director</p>
     </section>
 
 
