--- a/details.html
+++ b/details.html
@@ -95,7 +95,7 @@
                     <td>$100,000</td>
                 </tr>
                 <tr>
-                    <td>Compensation (CEO)</td>
+                    <td>Compensation (Executive Director)</td>
                     <td>$50,000</td>
                 </tr>
                 <tr>
