Edited email for now.

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,8 @@
             <div class="container">
                 <p>We'd love to hear from you. You can either email us at <em>serve[at]helpinghandsforall.org</em>, or fill out the form below and submit.</p>
                 <br><br>
-                <form action="https://formsubmit.co/4aff803a7694d0d47bc5c30c47b77723" method="POST">
+                <form action="https://formsubmit.co/##
+                4aff803a7694d0d47bc5c30c47b77723" method="POST">
 
                     <label for="fname">Full Name</label>
                     <input type="text" id="name" name="full_name" placeholder="Full Name" required>
