--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section id="hero">
         <nav>
-            <a class="navlink" href="contact.html">Contact</a>
+            <!-- <a class="navlink" href="contact.html">Contact</a> -->
             <!-- <a class="navlink" href="#">About</a> -->
         </nav>
         <h1 id="herocopy">Helping Hands For All Creatures Great And Small</h1>
@@ -68,7 +68,7 @@
 
             <p>But that's just the beginning. We will also raise funds for other nonprofits that are doing GOD's work. Specifically, nonprofits that are overlooked by public grants and other organizations.</p>
 
-            <p>If you're donating money, pray and ask GOD how much you should give. If you want to donate supplies, provide resources, and/or volunteer, please <a href="contact.html">contact us</a>.</p>
+            <p>If you're donating money, pray and ask GOD how much you should give. If you want to donate supplies, provide resources, and/or volunteer, please email us at serve@helpinghandsforall.org.</p>
 
             <p>Let's come together and love our neighbors the way GOD intended, by being the <strong>Helping Hands for All Creatures Great And Small!</strong></p>
         </section>
