--- a/details.html
+++ b/details.html
@@ -117,11 +117,11 @@
 
         <h1>Board of Directors</h1>
 
-        <p>Alisha M. Fredrickson,<br>Program Director</p>
+        <p>Alisha M. Fredrickson,<br>Co-Founder, Program Director</p>
         <p>Timothy G. Pipkorn,<br>Financial Director</p>
         <p>Fourth Board Member,<br>Pending</p>
         <p>Fifth Board Member,<br>Pending</p>
-        <p>Frank J. Quinones,<br>Executive Director</p>
+        <p>Frank J. Quinones,<br>Co-Founder, Executive Director</p>
     </section>
 
 
