--- a/details.html
+++ b/details.html
@@ -121,7 +121,7 @@
         <p>Timothy G. Pipkorn,<br>Financial Director</p>
         <p>Fourth Board Member,<br>Pending</p>
         <p>Fifth Board Member,<br>Pending</p>
-        <p>Frank J. Quinones,<br>Co-Founder, Executive Director</p>
+        <p>Frank J. Quinones,<br>Co-Founder, CEO</p>
     </section>
 
 
