--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <section id="hero">
         <nav>
-            <!-- <a class="navlink" href="contact.html">Contact</a> -->
-            <!-- <a class="navlink" href="#">About</a> -->
+            <!-- <a class="navlink" href="contact.html">Contact</a>
+            <a class="navlink" href="details.html">Details</a> -->
         </nav>
         <h1 id="herocopy">Helping Hands For All Creatures Great And Small</h1>
     </section>
@@ -74,7 +74,7 @@
         </section>
         <section class="content">
             <hr>
-            <p class="message">We are currently in the process of obtaining our 501(c)(3) status.</p>
+            <p class="message">Want to know more about us? Visit our <a href="details.html">details page</a>.</p>
             <hr>
         </section>
         <section class="content footer">
