--- a/index.html
+++ b/index.html
@@ -3,16 +3,31 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+        http-equiv="X-UA-Compatible"
+        content="IE=edge"
+    >
+    <meta
+        name="viewport"
+        content="width=device-width, initial-scale=1.0"
+    >
     <title>Helping Hands For All</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+        name="viewport"
+        content="width=device-width, initial-scale=1.0"
+    />
 
-    <link href="https://unpkg.com/@csstools/normalize.css" rel="stylesheet" />
+    <link
+        href="https://unpkg.com/@csstools/normalize.css"
+        rel="stylesheet"
+    />
 
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link
+        rel="stylesheet"
+        href="css/styles.css"
+    >
 
     <!-- I love you HEAVENLY FATHER! -->
 </head>
@@ -33,53 +48,94 @@
     <section id="main">
 
         <section class="card">
-            <img id="logo" src="media/helping-hands-placeholder-sm.png" alt="">
+            <img
+                id="logo"
+                src="media/helping-hands-placeholder-sm.png"
+                alt=""
+            >
             <p>Be a part of something big! Donate and get involved.</p>
-            <a class="btn" target="_blank" rel="noopener"><button>Donate</button></a>
+            <a
+                class="btn"
+                target="_blank"
+                rel="noopener"
+            ><button id="donate">&nbsp;&nbsp; Donate &nbsp;&nbsp;</button></a>
         </section>
 
         <div class="content">
             <h1>Vision</h1>
-            <p>Awaken the world to the reality of GOD and HIS KINGDOM by being HIS loving hands and heart, which will serve people, animals, and nature.</p>
+            <p>Awaken the world to the reality of GOD and HIS KINGDOM by being
+                HIS loving hands and heart, which will serve people, animals,
+                and nature.</p>
         </div>
         <div class="content">
             <h1>Mission</h1>
-            <p>We are GOD directed and we will glorify HIM by serving. We are here to create real transformation of the heart by fulfilling HIS will, expressed through love, compassion, and good works. In practice, this will be carried out by helping people
-                in need, helping animals in need, and helping nature in need. We are here to encourage and lift up HIS Children so they can realize their full potential. We need to renew the Spiritual connections to each other, animals, and nature that
-                have been severed by modern life. We do this, because we love HIM.
+            <p>We are GOD directed and we will glorify HIM by serving. We are
+                here to create real transformation of the heart by fulfilling
+                HIS will, expressed through love, compassion, and good works. In
+                practice, this will be carried out by helping people
+                in need, helping animals in need, and helping nature in need. We
+                are here to encourage and lift up HIS Children so they can
+                realize their full potential. We need to renew the Spiritual
+                connections to each other, animals, and nature that
+                have been severed by modern life. We do this, because we love
+                HIM.
             </p>
         </div>
         <section class="content">
             <h1>What We Do</h1>
-            <p>We are <strong>Helping Hands For All Creatures Great And Small</strong>; a GOD directed nonprofit that is here to create real transformation of the heart. Our organization has a simple goal; to help people, animals, and nature in need. On
-                a global scale. This will be achieved by working directly with individuals and collaborating with other nonprofits to accomplish amazing things.</p>
+            <p>We are <strong>Helping Hands For All Creatures Great And
+                    Small</strong>; a GOD directed nonprofit that is here to
+                create real transformation of the heart. Our organization has a
+                simple goal; to help people, animals, and nature in need. On
+                a global scale. This will be achieved by working directly with
+                individuals and collaborating with other nonprofits to
+                accomplish amazing things.</p>
 
-            <p>It may sound like too big a task, but this is coming from the only ONE who can make anything happen. GOD HIMSELF! </p>
+            <p>It may sound like too big a task, but this is coming from the
+                only ONE who can make anything happen. GOD HIMSELF! </p>
 
             <p>What will your donation achieve? </p>
             <ul>
 
-                <li>It will help people in need, be it homeless families, single parents, orphans, mentally ill, and more.</li>
+                <li>It will help people in need, be it homeless families, single
+                    parents, orphans, mentally ill, and more.</li>
 
-                <li>We will create an animal rescue to help animals in need and find them loving homes.</li>
+                <li>We will create an animal rescue to help animals in need and
+                    find them loving homes.</li>
 
-                <li>We will also help nature by cleaning up public areas such as beaches, wild life areas, and communities.</li>
+                <li>We will also help nature by cleaning up public areas such as
+                    beaches, wild life areas, and communities.</li>
             </ul>
 
-            <p>But that's just the beginning. We will also raise funds for other nonprofits that are doing GOD's work. Specifically, nonprofits that are overlooked by public grants and other organizations.</p>
+            <p>But that's just the beginning. We will also raise funds for other
+                nonprofits that are doing GOD's work. Specifically, nonprofits
+                that are overlooked by public grants and other organizations.
+            </p>
 
-            <p>If you're donating money, pray and ask GOD how much you should give. If you want to donate supplies, provide resources, and/or volunteer, please email us at serve@helpinghandsforall.org.</p>
+            <p>If you're donating money, pray and ask GOD how much you should
+                give. If you want to donate supplies, provide resources, and/or
+                volunteer, please email us at serve@helpinghandsforall.org.</p>
 
-            <p>Let's come together and love our neighbors the way GOD intended, by being the <strong>Helping Hands for All Creatures Great And Small!</strong></p>
+            <p>Let's come together and love our neighbors the way GOD intended,
+                by being the <strong>Helping Hands for All Creatures Great And
+                    Small!</strong></p>
         </section>
         <section class="content">
             <hr>
-            <p class="message">Want to know more about us? Visit our <a href="details.html">details page</a>.</p>
+            <p class="message">Want to know more about us? Visit our <a
+                    href="details.html"
+                >details page</a>.</p>
             <hr>
         </section>
         <section class="content footer">
-            <p class="legal">Copyright © 2022 Helping Hands For All Creatures Great And Small, Inc. All rights reserved.</p>
-            <p class="legal credit"><span>Photo by <a href="https://unsplash.com/@yansphotobook?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener">Yannis H</a> on <a href="https://unsplash.com/">Unsplash</a></span>
+            <p class="legal">Copyright © 2022 Helping Hands For All Creatures
+                Great And Small, Inc. All rights reserved.</p>
+            <p class="legal credit"><span>Photo by <a
+                        href="https://unsplash.com/@yansphotobook?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                        target="_blank"
+                        rel="noopener"
+                    >Yannis H</a> on <a
+                        href="https://unsplash.com/">Unsplash</a></span>
             </p>
             <!-- <p class="legal">Copyright © 2022 Helping Hands For All Creatures Great And Small, Inc. All rights reserved.</p>
             <p class="legal credit"><span>Photo by <a href="https://unsplash.com/@editholic7?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener">Kunal Shinde</a> on <a href="https://unsplash.com" target="_blank" rel="noopener">Unsplash</a></span>
