Updated details page.

--- a/details.html
+++ b/details.html
@@ -3,36 +3,64 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="status.css">
+    <meta
+        http-equiv="X-UA-Compatible"
+        content="IE=edge"
+    >
+    <meta
+        name="viewport"
+        content="width=device-width, initial-scale=1.0"
+    >
+    <link
+        rel="stylesheet"
+        href="status.css"
+    >
     <title>Details</title>
 </head>
 
 <body>
     <div id="anchor"></div>
     <section class="container">
-        <button class="button-13" role="button">Home</button>
+        <button
+            class="button-13"
+            role="button"
+        >Home</button>
         <h1>Organization's Mission & Goals</h1>
-        <p>Our mission is to awaken the world to the reality of GOD and HIS KINGDOM by being HIS loving hands and heart. We are here to create real transformation of the heart by fulfilling HIS will, expressed through love, compassion, and good works that
+        <p>Our mission is to awaken the world to the reality of GOD and HIS
+            KINGDOM by being HIS loving hands and heart. We are here to create
+            real transformation of the heart by fulfilling HIS will, expressed
+            through love, compassion, and good works that
             will manifest by serving people, animals, and nature in need.</p>
 
         <h3>Uniqueness of Purpose</h3>
-        <p>While there are other faith based organizations that do good works in the name of JESUS, our uniqueness comes from not focusing on just one specific issue or need. GOD intended for HIS creation to be connected and this is the reason we'll serve
+        <p>While there are other faith based organizations that do good works in
+            the name of JESUS, our uniqueness comes from not focusing on just
+            one specific issue or need. GOD intended for HIS creation to be
+            connected and this is the reason we'll serve
             people, animals, and nature in need.</p>
 
         <ul>
-            <li>We will create a network of good works and fellowship that will produce fruit.</li>
-            <li>We will provide a genuine and meaningful way of serving that's relational.</li>
-            <li>Modern living has severed and disrupted our connections to each other, animals, and nature. By serving one another and bearing each others burdens, along with helping animals and nature, we would be living life as it is intended to be. This
-                will foster a genuine respect and love for each other and GOD's creation.</li>
+            <li>We will create a network of good works and fellowship that will
+                produce fruit.</li>
+            <li>We will provide a genuine and meaningful way of serving that's
+                relational.</li>
+            <li>Modern living has severed and disrupted our connections to each
+                other, animals, and nature. By serving one another and bearing
+                each others burdens, along with helping animals and nature, we
+                would be living life as it is intended to be. This
+                will foster a genuine respect and love for each other and GOD's
+                creation.</li>
         </ul>
 
         <!-- <p>Studies have shown (cite studies) that interaction with animals and immersing ourselves in nature provides genuine health benefits.</p> -->
 
         <h1>Population Served </h1>
-        <p>We will follow the need. First we will seek and address situational circumstances such as lack of housing and food, drug addiction, orphaned children; neglected and abused animals, environmental issues, etc, by providing the necessary resources.
-            Then, we will address issues of the heart in order to ignite the hope and love of JESUS CHRIST.</p>
+        <p>We will follow the need. First we will seek and address situational
+            circumstances such as lack of housing and food, drug addiction,
+            orphaned children; neglected and abused animals, environmental
+            issues, etc, by providing the necessary resources.
+            Then, we will address issues of the heart in order to ignite the
+            hope and love of JESUS CHRIST.</p>
         <h1>Activities & Programs</h1>
         <h3>People in Need Program</h3>
         <ul>
@@ -46,8 +74,11 @@
         </ul>
         <h3>Animals in need program</h3>
         <ul>
-            <li>We will create an animal rescue to rescue animals from euthenasia, emergency situations, abuse, neglect, and abandonment and find them loving foster or forever homes.</li>
-            <li>We will help rescued animals at our facility or through partner facilities.</li>
+            <li>We will create an animal rescue to rescue animals from
+                euthenasia, emergency situations, abuse, neglect, and
+                abandonment and find them loving foster or forever homes.</li>
+            <li>We will help rescued animals at our facility or through partner
+                facilities.</li>
             <!-- <li>Find loving homes for domesticated animals.</li> -->
             <li>Rehab and release wild animals back into the wild.</li>
             <li>And more</li>
@@ -56,17 +87,23 @@
         <h3>Nature in need program</h3>
         <ul>
             <li>Clean up beaches, public areas, and communities.</li>
-            <li>Find innovative ways to address specific environmental issues.</li>
-            <li>Collaborate with innovative individuals and organizations that will create meaningful and significant change.</li>
+            <li>Find innovative ways to address specific environmental issues.
+            </li>
+            <li>Collaborate with innovative individuals and organizations that
+                will create meaningful and significant change.</li>
             <li>And more</li>
         </ul>
 
         <h1>Partnership, Collaborate, &amp; Support</h1>
-        <p>We will also partner and collaborate with other nonprofits that are doing GOD's work. Collaboration over competition. We need to step forward as a united body, together, in order to create real meaningful change and transformation of the heart.</p>
+        <p>We will also partner and collaborate with other nonprofits that are
+            doing GOD's work. Collaboration over competition. We need to step
+            forward as a united body, together, in order to create real
+            meaningful change and transformation of the heart.</p>
 
 
         <h1>Budget</h1>
-        <p>The goal is to become a global organization, hence the initial operational budget of $500,000. Our fiscal year ends June 30th.</p>
+        <p>The goal is to become a global organization, hence the initial
+            operational budget of $500,000. Our fiscal year ends June 30th.</p>
         <h3>Revenue Streams</h3>
         <ul>
             <li>Donations</li>
@@ -97,11 +134,12 @@
                     <td>$100,000</td>
                 </tr>
                 <tr>
-                    <td>Compensation (Executive Director)</td>
+                    <td>Compensation <!--(Executive Director)--></td>
                     <td>$50,000</td>
                 </tr>
                 <tr>
-                    <td>Legal fees, marketing, travel, food/bev, print collateral, IT, equipment, etc.</td>
+                    <td>Legal fees, marketing, travel, food/bev, print
+                        collateral, IT, equipment, etc.</td>
                     <td>$50,000</td>
                 </tr>
                 <tr>
@@ -129,12 +167,12 @@
 
     <script>
         var buttons = document.getElementsByClassName("button-13");
-        buttons[0].addEventListener("click", function() {
+        buttons[0].addEventListener("click", function () {
             window.location.href = "index.html";
         });
 
         var buttons = document.getElementsByClassName("button-13b");
-        buttons[0].addEventListener("click", function() {
+        buttons[0].addEventListener("click", function () {
             var anchorElement = document.getElementById("anchor");
             anchorElement.scrollIntoView({
                 behavior: 'smooth'
