Edits to index.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         name="viewport"
         content="width=device-width, initial-scale=1.0"
     >
-    <title>Helping Hands For All</title>
+    <title>Helping Hands For All Creatures Great And Small</title>
 
     <meta
         name="viewport"
@@ -34,7 +34,7 @@
 
 <body>
     <!-- 
-        The following design was the inspiration for this: https://websitedemos.net/heritage-hotel-04/ 
+        The design for this site was inspired by the following: https://websitedemos.net/heritage-hotel-04/ 
     -->
 
     <section id="hero">
