--- a/index.html
+++ b/index.html
@@ -14,20 +14,14 @@
     <title>Helping Hands For All Creatures Great And Small</title>
 
     <meta
-        name="viewport"
-        content="width=device-width, initial-scale=1.0"
-    />
+        name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link
-        href="https://unpkg.com/@csstools/normalize.css"
-        rel="stylesheet"
-    />
+        href="https://unpkg.com/@csstools/normalize.css" rel="stylesheet"/>
 
 
     <link
-        rel="stylesheet"
-        href="css/styles.css"
-    >
+        rel="stylesheet" href="css/styles.css" >
 
     <!-- I love you HEAVENLY FATHER! -->
 </head>
