--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
                     </li>
 
                     <li>
-                        It will create an animal rescue to help animals in need
+                        We will create an animal rescue to help animals in need
                         and find them loving homes.
                     </li>
 
                     <li>
-                        It will also help nature by cleaning up public areas
+                        We will also help nature by cleaning up public areas
                         such as beaches, wild life areas, and communities.
                     </li>
                 </ul>
