--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Helping Hands For All Creatures Great And Small</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="icon" href="media/Favicon---Helping-Hands.ico" type="image/x-icon">
 
         <link
             href="https://unpkg.com/@csstools/normalize.css"
