Updated email on index.

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     If you're donating money, pray and ask GOD how much you
                     should give. If you want to donate supplies, provide
                     resources, and/or volunteer, please email us at
-                    serve@helpinghandsforall.org.
+                    serve@helpinghandsforall.net.
                 </p>
 
                 <p>
