--- a/details.html
+++ b/details.html
@@ -75,8 +75,7 @@
             <h3>Animals in need program</h3>
             <ul>
                 <li>
-                    We will create an animal rescue to rescue animals from
-                    euthenasia, emergency situations, abuse, neglect, and
+                    We will establish an animal rescue dedicated to saving animals from euthanasia, emergency situations, abuse, neglect, and
                     abandonment and find them loving foster or forever homes.
                 </li>
                 <li>
