Updating contact.html.

--- a/contact.html
+++ b/contact.html
@@ -32,13 +32,12 @@
                 <div class="container">
                     <p>
                         We'd love to hear from you. You can either email us at
-                        <em>serve[at]helpinghandsforall.org</em>, or fill out
+                        <em>serve[at]helpinghandsforall.net</em>, or fill out
                         the form below and submit.
                     </p>
                     <br /><br />
                     <form
-                        action="https://formsubmit.co/##
-                4aff803a7694d0d47bc5c30c47b77723"
+                        action="https://usebasin.com/f/b3cd3717e375"
                         method="POST"
                     >
                         <label for="fname">Full Name</label>
