Trying out FabForm contact form.

--- a/contact.html
+++ b/contact.html
@@ -36,10 +36,7 @@
                         the form below and submit.
                     </p>
                     <br /><br />
-                    <form
-                        action="https://usebasin.com/f/b3cd3717e375"
-                        method="POST"
-                    >
+                    <form action="https://fabform.io/f/ehJQ6RS" method="POST">
                         <label for="fname">Full Name</label>
                         <input
                             type="text"
