--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,10 @@
                         the form below and submit.
                     </p>
                     <br /><br />
-                    <form action="https://fabform.io/f/ehJQ6RS" method="POST">
+                    <form
+                        action="https://formspree.io/f/manyzorb"
+                        method="POST"
+                    >
                         <label for="fname">Full Name</label>
                         <input
                             type="text"
